# liffier

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml
cmd/liffier/: main.go
internal/detector/: detector.go
internal/encoding/: encoding.go
internal/fuzzer/: fuzzer.go
internal/output/: output.go
src/liffier/: __init__.py  cli.py  detector.py  encodings.py  fuzzer.py
wordlists/: linux.txt  webapp.txt  windows.txt
