[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liffier"
version = "2.0.0"
description = "Path traversal / LFI fuzzer with 16 encoding bypass techniques, response analysis, concurrent requests, and proxy support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Moamen Basel (0xmmn)" }]
keywords = ["lfi", "path-traversal", "directory-traversal", "security", "fuzzer", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
liffier = "liffier.cli:main"

[project.urls]
Homepage = "https://github.com/momenbasel/liffier"
Repository = "https://github.com/momenbasel/liffier"
Issues = "https://github.com/momenbasel/liffier/issues"

[tool.setuptools.packages.find]
where = ["src"]
